# project2_Evseenkova_Marina_M25-555

./: .gitignore  Makefile  README.md  mevseenkova.cast  pyproject.toml
src/: decorators.py
src/primitive_db/: core.py  engine.py  main.py  metadata.json  utils.py
src/primitive_db/data/: users.json  users1.json
