[project]
name = "project2-evseenkova-marina-m25-555"
version = "0.1.0"
description = "Домашнее задание №2. Примитивная база данных"
authors = [
    {name = "mevseenkova",email = "m.samartseva@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "prompt (>=0.4.1,<0.5.0)",
    "prompt-toolkit (>=3.0.52,<4.0.0)"
]

[project.scripts]
project = "src.primitive_db.main:main"
database = "src.primitive_db.main:main"

[tool.poetry]
packages = [

    { include = "primitive_db", from = "src" }

]

# project = "src.primitive_db.main:main" 

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [] 
[dependency-groups]
dev = [
    "ruff (>=0.14.4,<0.15.0)"
]
